Fix filtered out darkness being behind some item component elements

--- a/style/view/InventorySlotView.scss
+++ b/style/view/InventorySlotView.scss
@@ -493,7 +493,7 @@
 			display: block;
 			position: absolute;
 			inset: 0px;
-			z-index: 10;
+			z-index: 1000;
 			border: none;
 			box-shadow: none;
 			background: color(background-1, 0.8);
